erDiagram
    Family ||..|| BuxferAccount : "can view Buxfer data"
    Account }|--|| User : ""
    BuxferAccount ||--|| User : ""
    User |o..o| Family : "owner"
    Family |o..o{ User : "member"
    User ||--|{ Session : ""
    VerificationToken

    VerificationToken {
        string identifier PK
        string token PK, UK
        timestamp expires
    }

    %% Users are invite only.
    User {
        string id PK
        string name
        string email
        timestamp emailVerified
        string image
        enum widget_style "simple, dense"
        bool email_notifications "cashflow check reminder and budget alert"
        string familyId FK
        string leadershipId FK
    }

    %% Family members are invite only.
    Family {
        string id PK
        string name "[user.name]'s family"
        string provider FK
        string providerAccountId FK
        string leaderId FK "userId"
    }

    %% for oath accounts and linking accounts (specifically Buxfer only)
    %% buxfer password - (encrypted and JsonWebToken)
    %% buxfer_token should be passed through as cookie to allow expiring
    %% on expire of buxfer_token use refresh_token (buxfer password) to relogin.
    Account {
        string provider PK "auth provider (email, github, etc.)"
        string providerAccountId PK "typicaly email"
        string type "oath, email, oidc"
        string refresh_token "oath refresh_token"
        string access_token "oath access_token"
        int expires_at
        string token_type
        string scope
        string id_token
        string session_state
        string userId FK
        string familyId FK
    }

    Session {
        string sessionToken PK
        timestamp expires
        string userId FK
    }

    BuxferAccount {
        string provider PK "'Buxfer'"
        string providerAccountId PK "Buxfer email"
        string type "'email'"
        string refresh_token "Buxfer password (encrypted and JsonWebToken)"
        string access_token "Buxfer token (token returned by buxfer api login)"
        int expires_at
        string token_type
        string scope
        string id_token
        string session_state
        string userId FK
        string familyId FK
    }